<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/task_name_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/task_name"
      android:singleLine="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_task_tv"
      />
  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/task_desc_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:hint="@string/task_description"
      android:singleLine="true"
      android:imeActionLabel="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/task_name_et"
      app:layout_constraintVertical_bias="0.0"
      />
  <TextView
      android:id="@+id/add_task_tv"
      style="@style/TextAppearance.AppCompat.Headline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/add_task"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <Button
      android:id="@+id/save_btn"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/save"
      android:textColor="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="@+id/add_task_tv"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/add_task_tv"
      />

</androidx.constraintlayout.widget.ConstraintLayout>