<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_detail"
    android:padding="16dp"
    tools:context=".view.activities.DetailActivity"
    >

  <TextView
      android:id="@+id/title_tv"
      style="@style/TextAppearance.MaterialComponents.Headline5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/image_path_iv"
      tools:text="@string/task_name"
      />
  <TextView
      android:id="@+id/description_tv"
      style="@style/TextAppearance.MaterialComponents.Body2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title_tv"
      tools:text="@string/task_description"
      />
  <ImageView
      android:id="@+id/image_path_iv"
      android:layout_width="0dp"
      android:layout_height="200dp"
      android:contentDescription="@string/task_image"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/add_image"
      />
</androidx.constraintlayout.widget.ConstraintLayout>